--- a/about.html
+++ b/about.html
@@ -123,8 +123,8 @@
                 <div class="col-lg-5">
                     <!-- Section Title Content Start -->
                     <div class="section-title-content">
-                        <p class="wow fadeInUp" data-wow-delay="0.2s">A vocalist-fusion & blending timeless traditional music with the soulful curves of jazz and other genres. I love weaving together elements of  pop,rock R & B, country. This fusion allows me to connect with diverse audiences and bring something fresh and unexpected to every set.</p>
-                        <p class="wow fadeInUp" data-wow-delay="0.4s">I'm on a mission to create bridges between cultures, genre & generations- inviting listeners into a space where ancient melodies meet modern expression.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.2s">A vocalist-fusion & blending timeless traditional music with the soulful curves of jazz and other genres. Weaving together elements of pop, rock R & B, country. This fusion allows me to connect with diverse audiences and bring something fresh and unexpected to every set.</p>
+                        <p class="wow fadeInUp" data-wow-delay="0.4s">Creating bridges between cultures, genre & generations- inviting listeners into a space where ancient melodies meet modern expression.</p>
                     </div>
                     <!-- Section Tite Content End -->
                 </div>
@@ -164,84 +164,84 @@
                                     <div class="service-work-no"><h2>01</h2></div>
                                     <div class="service-work-content">
                                         <h3>TOKYO DISNEY RESORT (ORIENTAL LAND CO. LTD)</h3>
-                                        <p>Tokyo, Japan &mdash; Dec 2024</p>
+                                        <p>Tokyo, Japan </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="0.5s">
                                     <div class="service-work-no"><h2>02</h2></div>
                                     <div class="service-work-content">
                                         <h3>ARTIST / THEATRE | DISNEY RECORDING JAPAN</h3>
-                                        <p>Tokyo, Japan &mdash; Dec 2024</p>
+                                        <p>Tokyo, Japan </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="0.6s">
                                     <div class="service-work-no"><h2>03</h2></div>
                                     <div class="service-work-content">
                                         <h3>HILTON - MAIN SINGER</h3>
-                                        <p>Hiroshima, Tokyo, Japan &mdash; 2018-2023</p>
+                                        <p>Hiroshima, Tokyo, Japan </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="0.7s">
                                     <div class="service-work-no"><h2>04</h2></div>
                                     <div class="service-work-content">
                                         <h3>PRINCE HOTELS, INC. (Lounge Singer)</h3>
-                                        <p>Tokyo, Japan &mdash; 2018-2023</p>
+                                        <p>Tokyo, Japan</p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="0.8s">
                                     <div class="service-work-no"><h2>05</h2></div>
                                     <div class="service-work-content">
                                         <h3>TOKYO BAY COURT CLUB HOTEL & SPA RESORT</h3>
-                                        <p>Koto City, Tokyo, Japan &mdash; 2022</p>
+                                        <p>Koto City, Tokyo, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="0.9s">
                                     <div class="service-work-no"><h2>06</h2></div>
                                     <div class="service-work-content">
                                         <h3>ANDAZ TOKYO - Bossanova Jazz Latin Singer</h3>
-                                        <p>Tokyo, Japan &mdash; 2018</p>
+                                        <p>Tokyo, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.0s">
                                     <div class="service-work-no"><h2>07</h2></div>
                                     <div class="service-work-content">
                                         <h3>PARK HYATT</h3>
-                                        <p>Tokyo, Japan &mdash; 2018</p>
+                                        <p>Tokyo, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.1s">
                                     <div class="service-work-no"><h2>08</h2></div>
                                     <div class="service-work-content">
                                         <h3>THE RITZ-CARLTON HOTEL COMP., LLC - Jazz Latin Singer</h3>
-                                        <p>Tokyo, Japan &mdash; 2018</p>
+                                        <p>Tokyo, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.2s">
                                     <div class="service-work-no"><h2>09</h2></div>
                                     <div class="service-work-content">
                                         <h3>GRAND HYATT TOKYO</h3>
-                                        <p>Tokyo, Japan &mdash; 2021-2022</p>
+                                        <p>Tokyo, Japan </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.3s">
                                     <div class="service-work-no"><h2>10</h2></div>
                                     <div class="service-work-content">
                                         <h3>WEDDING SINGER - Wedding and Events</h3>
-                                        <p>Tokyo, Japan &mdash; 2014</p>
+                                        <p>Tokyo, Japan  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.4s">
                                     <div class="service-work-no"><h2>11</h2></div>
                                     <div class="service-work-content">
                                         <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
-                                        <p>Toyota, Las Vegas, Nevada, USA &mdash; 2019</p>
+                                        <p>Toyota, Las Vegas, Nevada, USA  </p>
                                     </div>
                                 </div>
                                 <div class="service-work-item wow fadeInUp" data-wow-delay="1.5s">
                                     <div class="service-work-no"><h2>12</h2></div>
                                     <div class="service-work-content">
                                         <h3>PROFESSIONAL SINGER / EVENT SINGER</h3>
-                                        <p>Waldorf Astoria, New York City, NY, USA &mdash; 2018</p>
+                                        <p>Waldorf Astoria, New York City, NY, USA  </p>
                                     </div>
                                 </div>
                             </div>
@@ -624,7 +624,7 @@
                         </h2>
                         <div id="collapse2" class="accordion-collapse collapse" aria-labelledby="heading2" data-bs-parent="#faqaccordion">
                             <div class="accordion-body">
-                                <p>Yes! I love performing live. You can check my upcoming gigs on the website or reach out via the contact form for private bookings or event collaborations.</p>
+                                <p>You can check my upcoming gigs on the website or reach out via the contact form for private bookings or event collaborations.</p>
                             </div>
                         </div>
                     </div>
