--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                 <div class="section-title-content">
                     <p class="wow fadeInUp" data-wow-delay="0.2s">
                         A dynamic and versatile artist with jazz at the heart of my sound.
-                        My artistry goes beyond genre boundaries, as I love weaving together elements of pop, rock, R&B,
+                        My artistry goes beyond genre boundaries, weaving together elements of pop, rock, R&B,
                         country, and even traditional Japanese music. This fusion allows me to connect with diverse
                         audiences
                         and bring something fresh and unexpected to every set.
